<resources>
    <string name="app_name">Today Thanks Diary</string>
    <!--  AdMob 배너 Test ID  -->
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <!--  AdMob Sample ID  -->
    <string name="ad_application_id_sample">ca-app-pub-3940256099942544~3347511713</string>
    <string name="me">Me</string>
    <string name="to_other_targets">other targets</string>
    <string name="calendar">calendar</string>
    <string name="list">list</string>
    <string name="setting">settings</string>
    <string name="today">today</string>
    <string name="another_day">another day</string>
    <string name="date_change">date change</string>
    <string name="diary_write">diary writing</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="date_q">When?</string>
    <string name="target_q">What did you appreciate?</string>
    <string name="family">Family</string>
    <string name="friend">Friend</string>
    <string name="pet">Pet</string>
    <string name="work">Work</string>
    <string name="food">Food</string>
    <string name="nature">Nature</string>
    <string name="etc">etc.</string>
    <string name="back">back</string>
    <string name="date">Date</string>
    <string name="next">next</string>
    <string name="input_text_p">please input text</string>
    <string name="why">why?</string>
    <string name="ok">ok</string>
    <string name="no_diary_write">No diary created</string>
    <string name="completed">completed</string>
    <string name="total">total</string>
    <string name="date_of_use">Date of use</string>
    <string name="daily_average">daily average</string>
    <string name="date_range">SELECT A DATE RANGE</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="select_period">Select period</string>
    <string name="last_3_days">Last 3 days</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="write">Write</string>
    <string name="all">All</string>
    <string name="backup_ok">Backup successful</string>
    <string name="backup_failed">Backup failed</string>
    <string name="recovery_ok">Recovery successful</string>
    <string name="recovery_failed">Recovery failed</string>
    <string name="backup_recovery">Backup / Recovery</string>
    <string name="app_review">Rate this app</string>
    <string name="app_recommend">Recommend this app</string>
    <string name="other_apps">Developer\'s other apps</string>
    <string name="reward_ad_unit_id_test">ca-app-pub-3940256099942544/5224354917</string>
    <string name="all_delete">Diary Reset</string>
    <string name="delete_completed">Delete completed</string>
    <string name="delete_q">Do you want to delete the diary?</string>
    <string name="reset_q">Do you want to reset the diary?</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="update_q">Would you like to edit your diary?</string>
    <string name="update_completed">Update completed</string>
    <string name="premium_upgrade_m_0">Provides premium features.</string>
    <string name="premium_upgrade_m_1">- Remove ads</string>
    <string name="premium_upgrade_m_2">- Free premium upgrade</string>
    <string name="premium_upgrade_m_3">- Lifetime premium upgrade</string>
    <string name="premium_upgrade_btn">Premium upgrade</string>
    <string name="premium_restoration_btn">Purchase restoration</string>
    <string name="premium_free_btn">3 days free</string>
    <string name="backup_btn">backup</string>
    <string name="recovery_btn">recovery</string>
    <string name="backup_q">Do you want to backup?</string>
    <string name="recovery_q">Do you want to recover?</string>
    <string name="ad_application_id">ca-app-pub-5743192063444801~8075645035</string>
    <string name="banner_ad_unit_id_main">ca-app-pub-5743192063444801/1127093300</string>
    <string name="banner_ad_unit_id_detail">ca-app-pub-5743192063444801/9743949929</string>
    <string name="reward_ad_unit_id_3day_free">ca-app-pub-5743192063444801/3453873742</string>
</resources>
