<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/upgrade_ll"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/premium_upgrade_m_0"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="5dp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/premium_upgrade_m_1"
                android:textSize="14dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="5dp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/premium_upgrade_m_2"
                android:textSize="14dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="5dp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/premium_upgrade_m_3"
                android:textSize="14dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="5dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/upgrade_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/gold"
                android:padding="10dp"
                android:text="@string/premium_upgrade_btn"
                android:textSize="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>