<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/date_q"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_margin="5dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/today_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/today"
        android:textSize="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/another_day_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/another_day"
        android:textSize="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:gravity="right"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/cancel"
            android:textSize="18dp"
            android:textColor="@color/red"
            />

    </LinearLayout>

</LinearLayout>