<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/target_q"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="right"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <GridView
        android:id="@+id/target_grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="2"
        android:gravity="center"
        android:stretchMode="columnWidth"
        android:layout_margin="3dp"
        android:verticalScrollbarPosition="right"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:gravity="right"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/cancel"
            android:textSize="18dp"
            android:textColor="@color/red"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/back"
            android:textSize="18dp"
            />

    </LinearLayout>


</LinearLayout>