<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/why"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="right"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/target_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="right"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/why">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:minLines="3"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:gravity="right"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/cancel"
            android:textSize="18dp"
            android:textColor="@color/red"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/back"
            android:textSize="18dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/ok"
            android:textSize="18dp"
            android:textColor="@color/blue"
            />

    </LinearLayout>

</LinearLayout>