<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DiaryDetailActivity">

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/ll_bottom"
        android:layout_marginBottom="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="25dp" />

            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/lightGray"
                app:cardCornerRadius="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/detail_target_q_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/target_q"
                    android:textSize="22dp" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/detail_target_a_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="22dp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/lightGray"
                app:cardCornerRadius="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/detail_why_q_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/why"
                    android:textSize="22dp" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/detail_why_a_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="22dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/update" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/adFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom" />

</RelativeLayout>