<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiaryUpdateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="30dp"
                    android:textSize="25dp" />

                <LinearLayout
                    android:id="@+id/date_update_ll"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:background="@color/updateBtnBack">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/update"
                        android:textColor="@color/updateText"
                        android:textSize="20dp" />

                </LinearLayout>

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/lightGray"
                app:cardCornerRadius="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/detail_target_q_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/target_q"
                    android:textSize="22dp" />

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/target_a_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="22dp" />

                <LinearLayout
                    android:id="@+id/target_update_ll"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:background="@color/updateBtnBack">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/update"
                        android:textColor="@color/updateText"
                        android:textSize="20dp" />

                </LinearLayout>

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/lightGray"
                app:cardCornerRadius="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/detail_why_q_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/why"
                    android:textSize="22dp" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/why_a_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:minLines="3"
                        android:textSize="22dp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/completed_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/completed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back" />

    </LinearLayout>

</RelativeLayout>